<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context="com.example.heman.group14_hw09_a.Main8Activity">

    <LinearLayout
        android:id="@+id/cre_layout"
        android:layout_width="360dp"
        android:layout_height="match_parent"
        android:gravity="center|center_vertical"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-100dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.09"
                android:text="@string/name_label"
                android:textColor="@android:color/background_dark"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/trip_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"

                android:hint="@string/hint1"
                android:textColorHighlight="@android:color/background_dark"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="72dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:text="@string/loca_label"
                android:textColor="@android:color/background_dark"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"

                android:hint="@string/hint2"
                android:textColorHighlight="@android:color/background_dark"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:weightSum="1">

            <Button
                android:id="@+id/add_frien"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.27"
                android:onClick="onClick"
                android:text="@string/add_labe" />

            <Button
                android:id="@+id/upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="5dp"
                android:onClick="onClick"
                android:text="@string/uplo_labe"
                tools:textAllCaps="false" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:weightSum="1">

            <Button
                android:id="@+id/cre_but"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/cre_labe"
                tools:textAllCaps="false" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
