<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/back"
    tools:context="com.example.heman.group14_hw09_a.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/login_layout">

    <TextView
        android:id="@+id/apptitle"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="match_parent"
        android:layout_below="@id/apptitle"
        android:gravity="center_vertical|center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-50dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="0.5"
                android:text="@string/username_label"
                android:textAlignment="viewEnd"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/emailtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.28"
                android:ems="10"
                android:hint="@string/username_hint"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="0.25"
                android:text="@string/password_label"
                android:textAlignment="viewEnd"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/passwordText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:ems="10"
                android:inputType="textPassword"
                android:password="true" />
        </LinearLayout>

        <Button
            android:id="@+id/login_but"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/login_but_label" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/not_yet_label"
            android:textColor="@android:color/background_dark"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/signinbut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp" />
    </LinearLayout>
    <![CDATA[



     android:id="@+id/sign_in_button"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content" />


]]>
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:textSize="16sp"
        android:textStyle="bold"
        android:id="@+id/no_chats"/>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        android:id="@+id/chat_list" />

</RelativeLayout>
