<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.heman.group14_hw09_a.Main7Activity">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="match_parent"
        android:gravity="center|center_vertical"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:background="@drawable/back"
        android:layout_centerHorizontal="true">
        <RelativeLayout
            android:layout_width="150dp"
            android:layout_height="125dp"
            android:layout_marginTop="-50dp" >

        <ImageView
            android:id="@+id/profile_icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@mipmap/ic_launcher_round"/>

            <TextView
                android:id="@+id/updatePhoto"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="90dp"
                android:background="@color/common_google_signin_btn_text_dark_disabled"
                android:gravity="center|center_vertical"
                android:text="@string/update_photo"
                android:textColor="?android:attr/textColorPrimaryInverseNoDisable"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.09"
                android:text="@string/name1_label"
                android:textColor="@android:color/background_dark"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/name1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:text="TextView"
                android:textColorHighlight="@android:color/background_dark"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text="@string/name2_label"
                android:textColor="@android:color/background_dark"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/name2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:text="TextView"
                android:textColorHighlight="@android:color/background_dark"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text="@string/gender_label"
                android:textColor="@android:color/background_dark"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:text="TextView"
                android:textColorHighlight="@android:color/background_dark"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp" >

            <TextView
                android:id="@+id/textView8"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text="@string/email_label"
                android:textColor="@android:color/background_dark"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/email_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:text="TextView"
                android:textColorHighlight="@android:color/background_dark"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:weightSum="1">

            <Button
                android:id="@+id/rem_but"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remove_button"
                tools:textAllCaps="false" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
